# aoc22

./: Cargo.toml  Justfile
benches/: alldays.rs
cargo/: config.toml
src/: array_from_iter.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day22.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  grid.rs  lib.rs  main.rs  searcher.rs  smol_map.rs  templ.rs  u32set.rs  utils.rs
